# NREE_persistence_reef_structures_meta_analysis

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
calcification_analysis/analysis/: analysis.py  analysis_utils.py  meta_regression.py
calcification_analysis/analysis/rnative/: helper_functions.R
calcification_analysis/plotting/: analysis.py  climatology.py  data_exploration.py  plot_config.py  plot_utils.py
calcification_analysis/processing/: carbonate_processing.py  cleaning.py  climatology.py  locations.py  prepare_data_for_r.py  process.py  processing.py  taxonomy.py
calcification_analysis/utils/: file_ops.py  utils.py
calcification_meta_analysis/analysis/: analysis.py  analysis_utils.py  meta_regression.py  metafor.py
calcification_meta_analysis/analysis/rnative/: analysis.R  functions.R  sensitivity.R
calcification_meta_analysis/plotting/: analysis.py  climatology.py  data_exploration.py  interactive.py  locations.py  plot_config.py  plot_utils.py
calcification_meta_analysis/processing/: carbonate_processing.py  cleaning.py  climatology.py  groups_processing.py  locations.py  prepare_data_for_r.py  process.py  processing.py  taxonomy.py  units.py
calcification_meta_analysis/utils/: config.py  file_ops.py  metafor_context.py  r_context_handler.py  utils.py
data/: _directory_description.md  coral_cover_locs.xlsx  extracted_bioerosion_data.xlsx  extracted_calcification_data.xlsx
data/UNEP_WCMC/: _directory_description.md
data/climatology/: _directory_description.md  coral_cover_ph_scenarios_output_table_site_locations.csv  coral_cover_sst_scenarios_output_table_site_locations.csv  ph_scenarios_output_table_site_locations.csv  sst_scenarios_output_table_site_locations.csv
data/climatology/MEOW/: _directory_description.md
data/climatology/UNEP_WCMC/: _directory_description.md
notebooks/: meta-analysis.ipynb
resources/: _directory_description.md  gmaps_locations.yaml  locations.csv  locations.yaml  mapping.yaml  species_mapping.yaml
