[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calcification_meta_analysis"
description = "Code accompaniment for the meta-analysis of calcification rates in the NREE paper 'Persistence of Coral Reef Structures into the 21st Century'"
version = "0.0.1"
authors = [
    { name="Orlando Timmerman", email="rt582@cam.ac.uk" }
]

maintainers = [
    { name="Orlando Timmerman", email="rt582@cam.ac.uk" }
]

readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
packages = ["calcification_meta_analysis"]

requires-python = ">=3.11"
dependencies = [
    # Core data science
    "pandas == 2.3.3",
    "numpy == 2.3.4",
    "scipy == 1.16.2",
    
    # Visualization
    "matplotlib == 3.10.7",
    "seaborn == 0.13.2",
    "cartopy == 0.25.0",
    "Pillow == 11.3.0",
    "ipykernel >= 7.0.0",
    "ipywidgets >= 8.0.0",
    "jupyter >= 1.0.0",
    
    # Geospatial
    "geopandas == 1.1.1",
    "shapely == 2.1.2",
    
    # Statistics and machine learning
    "statsmodels == 0.14.5",
    "scikit-learn == 1.7.2",
    
    # R integration
    "rpy2 == 3.6.4",
    
    # File handling
    "openpyxl == 3.1.5",
    "PyYAML == 6.0.3",
    
    # Utilities
    "tqdm == 4.67.1",
    "requests == 2.32.5",
    "googlemaps == 4.10.0",
    
    # Specialized
    "cbsyst == 0.4.9",
    ]
repository = "https://github.com/orlando-code/NREE_persistence_reef_structures_meta_analysis/"
documentation = "https://github.com/orlando-code/NREE_persistence_reef_structures_meta_analysis/README.md"

[project.optional-dependencies]
dev = [
    "pytest >= 7.4.0",
    "black >= 23.0.0",
    "ruff >= 0.1.0",
    "mypy >= 1.5.0",
    "jupyter >= 1.0.0",
    "ipykernel == 7.0.1",
]


